static/styles/style.css
/* ... */
.topics__list {
	list-style: none;
}

.topics__list li a {
	display: flex;
	justify-content: space-between;
	margin-bottom: 3rem;
	font-weight: 500;
	color: var(--color-light-gray);
	transition: all 0.3s ease-in-out;
}

.topics__list li a.active,
.topics__list li a:hover {
	color: var(--color-main);
}

.topics__list li a span {
	padding: 0.5rem 1rem;
	background-color: var(--color-dark);
	border-radius: 3px;
	font-size: 1.3rem;
	font-weight: 700;
	letter-spacing: 1px;
}

.topics-page a:hover {
	text-decoration: underline;
}

.topics-page .topics__list li:not(:last-child) a {
	margin: 2rem 0;
	padding-bottom: 1rem;
	text-decoration: none;
	border-bottom: 1px solid var(--color-dark-medium);
}

.topics-page .header__search {
	display: block;
}

@media screen and (max-width: 500px) {
	.mobile-menu .header__search {
		display: block;
		margin-bottom: 2.4rem;
	}
}

/*==============================
=>  Room List
================================*/

.roomList__header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin-bottom: 2.4rem;
}

.roomList__header h2 {
	text-transform: uppercase;
	font-weight: 500;
	color: var(--color-light);
	letter-spacing: 1px;
}

.roomList__header p {
	font-weight: 500;
	color: var(--color-dark-light);
}

/*========== Room List Room ==========*/

.roomListRoom {
	margin-bottom: 2.4rem;
	background-color: var(--color-dark);
	border-radius: 1rem;
	padding: 2rem;
}

.roomListRoom__header {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.roomListRoom__author {
	font-weight: 500;
	display: flex;
	align-items: center;
	gap: 1rem;
}

.roomListRoom__actions {
	display: flex;
	align-items: flex-start;
	gap: 1rem;
	position: relative;
}

.roomListRoom__actions span {
	font-size: 1.4rem;
	font-weight: 500;
}

.roomListRoom__actions svg {
	fill: var(--color-main);

	width: 1.6rem;
	height: 1.6rem;
}

.roomListRoom__content {
	margin: 1rem 0;
}

.roomListRoom__content a {
	font-size: 2rem;
	font-weight: 500;
	margin-bottom: 1.5rem;
	color: var(--color-light);
	transition: all 0.3s ease-in-out;
}

.roomListRoom__content a:hover {
	color: var(--color-main);
}

.roomListRoom__meta {
	border-top: 1px solid var(--color-dark-medium);
	padding-top: 1rem;
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.roomListRoom__joined {
	color: var(--color-light-gray);
	display: flex;
	align-items: center;
	gap: 1rem;
	font-size: 1.4rem;
	font-weight: 500;
}

.roomListRoom__joined svg {
	fill: var(--color-main);
	width: 1.6rem;
	height: 1.6rem;
}

.roomListRoom__topic {
	padding: 5px 1.5rem;
	background-color: var(--color-dark-medium);
	border-radius: 5rem;
	font-weight: 500;
	font-size: 1.3rem;
}

/*==============================
=>  Activities
================================*/

.activities {
	background: var(--color-dark);
	border-radius: 5px;
	overflow: hidden;
}

.activities__header h2 {
	background-color: var(--color-dark-light);
	text-transform: uppercase;
	font-weight: 500;
	padding: 1rem 1.5rem;
	color: var(--color-light);
	letter-spacing: 1px;
	font-size: 1.4rem;
}

.activities__box {
	margin: 1.5rem;
	padding: 1.5rem;
	border: 2px solid var(--color-dark-medium);
	border-radius: 5px;
}

.activities__boxHeader p {
	font-size: 1.4rem;
	line-height: 1.3;
}

.activities__boxHeader p span {
	color: var(--color-gray);
	font-size: 1.2rem;
	display: block;
}

.activities__boxContent {
	margin-left: 4.2rem;
}

.activities__boxContent {
	font-size: 1.4rem;
}

.activities__boxContent a:hover {
	text-decoration: underline;
}

.activities__boxRoomContent {
	background: var(--color-bg);
	padding: 1rem;
	border-radius: 5px;
	margin-top: 1rem;
	margin-left: -4.2rem;
}

.roomListRoom__actions svg {
	fill: var(--color-light-gray);
}

/*==============================
=>  Create Room
================================*/

.create-room.layout .layout__box {
	max-width: 68rem;
}

/*==============================
=>  Update Account
================================*/

.update-account.layout .layout__box {
	max-width: 68rem;
}

/*==============================
=>  Delete Item
================================*/

.delete-item.layout .layout__box {
	max-width: 68rem;
}

/*==============================
=>  Auth
================================*/

.auth__tagline {
	text-align: center;
	margin-bottom: 3rem;
	color: var(--color-main);
	font-weight: 500;
	font-size: 1.8rem;
}
.auth .layout__boxHeader {
	text-align: center;
	justify-content: center;
}

.auth__action {
	margin-top: 3rem;
	text-align: center;
}

/*==============================
=>  Settings
================================*/

.settings__avatar {
	margin-bottom: 3rem;
	text-align: center;
	margin: 0 auto;
	display: flex;
	justify-content: center;
}

.settings__avatar .avatar {
	margin: 1rem;
}

/*==============================
=>  Profile
================================*/
.profile {
	margin-bottom: 3rem;
}

.profile__avatar {
	text-align: center;
}

.profile__info {
	text-align: center;
}

.profile__info h3 {
	font-size: 2rem;
	color: var(--color-light);
	font-weight: 400;
}

.profile__info p {
	color: var(--color-main);
	font-weight: 500;
	margin-bottom: 1rem;
}

.profile__about {
	margin-top: 2rem;
}

.profile__about h3 {
	text-transform: uppercase;
	color: var(--color-dark-light);
	margin-bottom: 0.5rem;
}

.profile-page .roomList__header {
	margin-bottom: 1.5rem;
}

.profile-page .roomList__header h2 {
	color: var(--color-dark-light);
}

/*==============================
=>  Room
================================*/

.room,
.participants {
	background: var(--color-dark);
	max-height: 87.5vh;
	border-radius: 0.7rem;
	overflow: hidden;
	position: relative;
}

@media screen and (max-width: 900px) {
	.participants {
		display: none;
	}

	.layout--2 > .container > div:first-child {
		flex-basis: 100%;
	}
}
/* ... */

